Made FG able to run at Gradle 4.8